Fixes & additions * Added ./components to tailwindcss config so styling works * Added components/* import alias * Changed Header title * Removed comments & background color in app/layout.tsx * Updated link string * Updated imports with new alias * Added tailwind class grid gap-6 to login container * Removed global styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-p,
-h1 {
-  @apply text-xl text-orange-500;
-}
